@@ -1,5 +1,5 @@
 environment:
-  version: 20170618
+  version: 20170620
   affix: njsq
   matrix:
     - nodejs_version: "8"
