@@ -1,6 +1,6 @@
 {
   "name": "njsq",
-  "version": "2017.6.18",
+  "version": "2017.6.20",
   "author": "Claude SIMON (http://q37.info/contact/)",
   "description": "Node.js addon wrapper.",
   "main": "njsq.js",
@@ -10,8 +10,8 @@
   "binary": {
     "module_name": "njsq",
     "module_path": ".",
-    "remote_path": "./epeios-q37/njsq/releases/download/v20170618/",
-    "package_name": "{module_name}-v20170618-{node_abi}-{platform}-{arch}.tar.gz",
+    "remote_path": "./epeios-q37/njsq/releases/download/v20170620/",
+    "package_name": "{module_name}-v20170620-{node_abi}-{platform}-{arch}.tar.gz",
     "host": "https://github.com"
   },
   "dependencies": {
